# gkd_vision_26

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.dev  docker-compose.yml  readme.md  run_hero.sh  run_infantry.sh  run_sentry.sh
.devcontainer/: devcontainer.json
calibration/: README.md  calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp
configs/: calibration.yaml  gkdhero.yaml  gkdinfantry.yaml  gkdsentry.yaml
io/: CMakeLists.txt  camera.cpp  gkdcontrol.cpp  gkdcontrol.hpp
src/: gkdhero.cpp  gkdhero_debug.cpp  gkdinfantry.cpp  gkdinfantry_MPC.cpp  gkdinfantry_debug.cpp  gkdinfantry_debug_MPC.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  solver.cpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
tasks/omniperception/: decider.cpp  decider.hpp  perceptron.cpp  perceptron.hpp
tests/: camera_detect_test.cpp  camera_test.cpp  camera_thread_test.cpp  handeye_test.cpp
